Failed experiment on google colab with local-rag (jonfairbanks's  streamlit app). I installed ollama, downloaded a model, activated the pip env, and ran the streamlit app through a local tunnel. sadly, time out error in local tunnel.  main

--- a/failed_experiment_local_rag_on_colab_streamlit_localtunnel.ipynb
+++ b/failed_experiment_local_rag_on_colab_streamlit_localtunnel.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOD9eVhiuf5866VAKiimppB",
+      "authorship_tag": "ABX9TyPDQQZAoOFZ35GfdqXn1rRy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,7 +41,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -82,7 +82,7 @@
         "id": "1cglfyG4WKgL",
         "outputId": "c9516329-ff33-435e-ff0d-73677dc4b160"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -119,7 +119,7 @@
         "id": "c3vvSvd8gvtg",
         "outputId": "f709a1ab-7be4-4d80-d7a6-07ce4740615a"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -150,13 +150,13 @@
       "metadata": {
         "id": "6LO0kJGLiLdY"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "!ollama pull llama3"
+        "!ollama pull llama3 #download llama3 model"
       ],
       "metadata": {
         "colab": {
@@ -165,7 +165,7 @@
         "id": "AmdyYfIui8sm",
         "outputId": "f20cead6-641b-4896-caab-17ec7e7e3496"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2663,13 +2663,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "y1CCLGwGbrof",
-        "outputId": "e033e863-fc70-41b7-8a4a-f7534d2ad110"
+        "outputId": "d9dc33ec-cd34-4d21-98c0-d62354902c0b"
       },
       "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
+          "metadata": {
+            "tags": null
+          },
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "34.44.94.254\n",
             "\u001b[K\u001b[?25h\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m \u001b[0m\u001b[35msaveError\u001b[0m ENOENT: no such file or directory, open '/content/local-rag/package.json'\n",
